<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:id="@+id/optSet1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cut"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurface"
            android:text="@string/cut" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/copy"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurface"
            android:text="@string/copy"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/paste"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurface"
            android:text="@string/paste"/>
        <ImageButton
            android:id="@+id/nextOptSet"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/more_options"
            app:srcCompat="@drawable/ic_more_vert_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/optSet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">
        <ImageButton
            android:id="@+id/prevOptSet"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/undo"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undo"
            android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectall"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_all"
            android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/redo"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redo"
            android:textColor="?attr/colorOnSurface" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
